<resources>
    <string name="app_name">menu_Cap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jornada_prompt">Selecciona la jornada:</string>
    <string-array name="jornada_options">
        <item>Jornada</item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>
    <string name="charlas_prompt">Charlas más solicitadas</string>

    <string name="solicitar_charla">Solicitar Charla</string>
    <string name="actualizar_datos">Actualizar datos</string>

    <string name="hola">hola</string>
    <string name="sostenimiento">Sostenimiento</string>
    <string name="eventos">Eventos</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="correo">Correo</string>
    <string name="contacto">Contacto</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="configuracion_general">Configuracion General</string>
    <string-array name="charlas_array">
        <item>Psicología</item>
        <item>Deporte</item>
    </string-array>
</resources>