<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@color/verde_claro">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="65dp"
                android:text="@string/configuracion_general"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />



        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="30dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="11dp"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/editar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="11dp"
                android:text="@string/usuario"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/editar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/tex0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="28dp"
                android:text="@string/contacto"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/edit0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/editar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="11dp"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/editt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/editar"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card0"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/texto0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="81dp"
                android:text="@string/contrase_a_actual"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/image0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/editar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card30"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="11dp"
                android:text="@string/contrase_a_nueva"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imagen9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ocultar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/card40"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="15dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card30">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="28dp"
                android:text="@string/confirmar_contrase_a"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingRight="16dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ocultar"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:backgroundTint="@color/verde_claro"
        android:textStyle="bold"
        android:text="@string/actualizar_datos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card40"/>


</androidx.constraintlayout.widget.ConstraintLayout>