<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/textSlideshow"
    tools:context=".ui.slideshow.SlideshowFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/verde_claro"
            android:padding="2dp">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="128dp"
                android:text="@string/eventos"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:padding="6dp">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/apoyo" />

            <TextView
                android:id="@+id/texto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="11dp"
                android:text="Sostenimiento"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:cardCornerRadius="6dp"
        android:background="@color/white"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toTopOf="@+id/card2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:background="@drawable/border">

            <ImageView
                android:id="@+id/image_even"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/apoyo" />

            <TextView
                android:id="@+id/texto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="11dp"
                android:text="Sostenimiento"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card8"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        android:layout_margin="40dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:padding="6dp">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/apoyo" />

            <TextView
                android:id="@+id/texto6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="11dp"
                android:text="@string/sostenimiento"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card5"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/card8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card8"
        app:layout_constraintTop_toTopOf="@+id/card8">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:padding="6dp">

            <ImageView
                android:id="@+id/image_evento"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/apoyo" />

            <TextView
                android:id="@+id/texto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="11dp"
                android:text="Sostenimiento"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/verde_claro"
        android:text="@string/solicitar_charla"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card8" />

</androidx.constraintlayout.widget.ConstraintLayout>